# BlockAnimator

./: README.md  demo.py  pyproject.toml
animation/: controller.py  groups.py  orchestrator.py  proxy.py  timeline.py
blockanimator/: __init__.py  __main__.py
blockanimator/animation/: __init__.py  anim_types.py  controller.py  groups.py  orchestrator.py  proxy.py  timeline.py
blockanimator/consensus/: README_DEEPWIKI.txt  __init__.py  base_dag.py  bitcoin_dag.py  constants.py  dag_types.py  ghostdag_algorithm.py  ghostdag_dag.py  layer_dag.py  logical_block.py  manager.py  separated_dag.py  visual_block.py
blockanimator/core/: __init__.py  camera.py  coordinate_system.py  render_manager.py  renderer.py  scene.py
blockanimator/demos/: __init__.py  demo.py
blockanimator/rendering/: __init__.py  consensus_scene_adapter.py  visual_dag_renderer.py
blockanimator/sprites/: __init__.py  block.py  connection.py
blockanimator/utils/: __init__.py  config.py  module_ops.py
consensus/: block_dag.py  manager.py
core/: camera.py  coordinate_system.py  render_manager.py  renderer.py  scene.py
demos/: demo.py
engine/: animation_controller.py  animations.py  coordinate_system.py  renderer.py  scene.py
engine/animations/: animations.py  block_animation_proxy.py
examples/: auto_ghostdag_demo.py  auto_layerdag_demo.py  bitcoin_demo.py  bitcoin_examples.py  blocks.py  camera_demo.py  demo_scenes.py  ghostdag_demo.py  layerdag_demo.py  simultaneous_vs_sequential_demo.py  stress_test_demo.py
sprites/: block.py  connection.py
utils/: config.py
(+23 files in other folders)
